# MatrixComputations

./: .gitignore  Matrix.cpp  Matrix.hpp  README.md  main.cpp
app/: main.cpp
src/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  MatrixDecompositions.cpp  MatrixDecompositions.hpp  NumericVector.cpp  NumericVector.hpp  RealVector.cpp  RealVector.hpp  main.cpp
tests/: CMakeLists.txt  CMakeSettings.json  EigenInterop.cpp  EigenInterop.hpp  matmul_m1.txt  matmul_m2.txt  matmul_m3.txt  test_binary_operations.cpp  test_ctors_and_indexing.cpp  test_decompositions.cpp  test_mat.txt  test_operators.cpp  test_unary_operations.cpp  test_utility.cpp  test_utility.hpp  test_vectors.cpp  tests.cpp  tests_decompositions.cpp  tests_operators.cpp  tests_utility.cpp  tests_utility.hpp
